tests/snapshots/snapshot_regression__regr_negotiate_with_requirements.snap
---
source: tests/snapshot_regression.rs
expression: result
---
{
  "native": [
    "streaming"
  ],
  "emulated": [
    [
      "tool_read",
      "client_side"
    ]
  ],
  "unsupported": []
}
