tests/snapshots/snapshot_regression__regr_negotiation_all_native.snap
---
source: tests/snapshot_regression.rs
expression: result
---
{
  "native": [
    "streaming",
    "tool_read",
    "tool_write"
  ],
  "emulated": [],
  "unsupported": []
}
