tests/snapshots/snapshot_regression__regr_negotiation_all_unsupported.snap
---
source: tests/snapshot_regression.rs
expression: result
---
{
  "native": [],
  "emulated": [],
  "unsupported": [
    [
      "streaming",
      "not declared in manifest"
    ],
    [
      "tool_bash",
      "not declared in manifest"
    ]
  ]
}
