tests/snapshots/snapshot_regression__regr_policy_empty_allows_all.snap
---
source: tests/snapshot_regression.rs
expression: "json!({\n    \"tool_allowed\": tool.allowed, \"read_allowed\": read.allowed,\n    \"write_allowed\": write.allowed,\n})"
---
{
  "read_allowed": true,
  "tool_allowed": true,
  "write_allowed": true
}
