tests/snapshots/snapshot_regression__regr_receipt_with_hash.snap
---
source: tests/snapshot_regression.rs
expression: v
---
{
  "artifacts": [
    {
      "kind": "patch",
      "path": "out.patch"
    }
  ],
  "backend": {
    "adapter_version": "0.1.0",
    "backend_version": "1.2.0",
    "id": "sidecar:node"
  },
  "capabilities": {
    "streaming": "native",
    "tool_read": "native"
  },
  "meta": {
    "contract_version": "abp/v0.1",
    "duration_ms": 1500,
    "finished_at": "2024-01-01T00:00:00Z",
    "run_id": "00000000-0000-0000-0000-000000000000",
    "started_at": "2024-01-01T00:00:00Z",
    "work_order_id": "00000000-0000-0000-0000-000000000001"
  },
  "mode": "mapped",
  "outcome": "complete",
  "receipt_sha256": "de843463053eb8b367e50ce2c951ccaa421c7ab03abcc7c55d374b72802f7fd3",
  "trace": [
    {
      "message": "starting",
      "ts": "2024-01-01T00:00:00Z",
      "type": "run_started"
    },
    {
      "message": "done",
      "ts": "2024-01-01T00:00:00Z",
      "type": "run_completed"
    }
  ],
  "usage": {
    "cache_read_tokens": 50,
    "cache_write_tokens": 10,
    "estimated_cost_usd": 0.005,
    "input_tokens": 200,
    "output_tokens": 150,
    "request_units": 1
  },
  "usage_raw": {
    "completion_tokens": 150,
    "prompt_tokens": 200
  },
  "verification": {
    "git_diff": "+added line",
    "git_status": "M src/lib.rs",
    "harness_ok": true
  }
}
